<resources>
    <string name="app_name">SVE Bro</string>

    <string name="emote1">emote0</string>
    <string name="emote2">emote1</string>
    <string name="emote3">emote2</string>
    <string name="emote4">emote3</string>
    <string name="emote5">emote4</string>
    <string name="emote6">emote5</string>
    <string name="emote7">emote6</string>

    <string name="my_turn">我的\n回合</string>
    <string name="turn_end">结束\n回合</string>
    <string name="select_zip">选择zip文件</string>
    <string name="select_zip_hint">Please select a zip file</string>
    <string name="enter_leader_name_hint">Enter Leader Name</string>
    <string name="class1">Class:</string>
    <string name="start_inserting_leader">开始导入</string>
    <string name="ready_to_battle">准备战斗</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="slash">/</string>
    <string name="select_your_leader">选择你的高手</string>
    <string name="ready_for_battle2">准备战斗!!</string>
    <string name="select_btn">选择</string>
</resources>